On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   .vscode/settings.json
	modified:   index.html
	modified:   pagina1.html
	modified:   pagina4.html
	modified:   pagina5.html
	modified:   pagina6.html
	modified:   pagina7.html
	modified:   presentacion.html

--- a/pagina1.html
+++ b/pagina1.html
@@ -24,7 +24,7 @@
       href="imagenes/logo.png"
     />
     <style>
-      nav{
+      nav {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -73,50 +73,6 @@
           <strong>Dirección: </strong>
           <em>Av. de Isaac Peral, 44, Carretera de Cádiz, 29004 Málaga </em>
         </p>
-      </section>
-      <br />
-      <hr />
-      <br />
-      <!-- Parte donde aparecen nuestras redes sociales -->
-      <section id="redesSociales">
-        <h2>Redes sociales</h2>
-        <br />
-        <a
-          href="https://www.instagram.com/"
-          target="_blank"
-        >
-          <img
-            src="imagenes/logo insta.png"
-            alt="Logo de Instagram"
-            width="60"
-            height="60"
-            title="Logo Insta"
-          />
-        </a>
-        <a
-          href="https://www.tiktok.com/"
-          target="_blank"
-        >
-          <img
-            src="imagenes/logo tiktok.png"
-            alt="Logo de Tiktok"
-            width="60"
-            height="60"
-            title="Logo Tiktok"
-          />
-        </a>
-        <a
-          href="https://www.youtube.com/"
-          target="_blank"
-        >
-          <img
-            src="imagenes/logo youtube.jpg"
-            alt="Logo de YouTube"
-            width="60"
-            height="60"
-            title="Logo Youtube"
-          />
-        </a>
       </section>
       <hr />
     </main>
@@ -170,7 +126,14 @@
           />
         </a>
       </nav>
-      <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
     </footer>
   </body>
 </html>
