--- a/pagina5.html
+++ b/pagina5.html
@@ -25,7 +25,7 @@
     />
 
     <style>
-      nav{
+      nav {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -616,7 +616,14 @@
           />
         </a>
       </nav>
-      <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
     </footer>
   </body>
 </html>
