--- a/pagina7.html
+++ b/pagina7.html
@@ -24,7 +24,7 @@
       href="imagenes/logo.png"
     />
     <style>
-      nav{
+      nav {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -57,66 +57,68 @@
     </header>
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
-      <!-- Aparecen las distintas preguntas y respuestas más comunes que los clientes suelen hacer. -->
-      <h3>PREGUNTAS FRECUENTES</h3>
-      <details>
-        <p>
-          En Diva MakeUp nuestros productos son 100% <em>cruelty free</em>, ya
-          que obtenemos nuestros productos de proveedoras homologadas que
-          cumplen el reglamento de la ley animal.
-        </p>
-        <summary>¿Son nuestros productos <em>cruelty free</em> ?</summary>
-      </details>
-      <br />
-      <details>
-        <p>
-          Sí, disponemos de tarjetas de regalo de 10, 50 y 100 euros además de
-          contar con tarjetas monedero las cuales se pueden recargar con la
-          cantidad deseada.
-        </p>
-        <summary>¿Se pueden comprar tarjetas de regalo?</summary>
-      </details>
-      <br />
-      <details>
-        <p>
-          Los envíos tardan de 1 a 3 días laborables en ser enviados, a partir
-          de este punto cuentas con dos paquetes de envío, el normal el cual
-          tarda 1 semana o el <em>express </em>que puede tardar de 1 a 3 días.
-          <summary>¿Cuánto tarda en llegar el envío a casa?</summary>
-        </p>
-      </details>
-      <br />
-      <details>
-        <p>
-          A través de nuestras redes sociales o acercándote a nuestra tienda
-          física donde estaremos encantados de atenderte.
-        </p>
-        <summary>¿Cómo puedo contactar con vosotros?</summary>
-      </details>
-      <br />
-      <details>
-        <p>
-          Sí, están a disposición de todos nuestros clientes la posibilidad de
-          atención personalizada y formación en maquillaje.
-        </p>
-        <summary>¿Ofrecéis cursos personalizados?</summary>
-      </details>
-      <br />
-      <details>
-        <p>
-          Para formar parte de nuestro equipo, mande su CV a nuestro correo
-          electrónico o preséntalo en nuestra tienda física.
-        </p>
-        <summary>¿Cómo puedo trabajar con vosotros?</summary>
-      </details>
-      <br />
-      <details>
-        <p>
-          Si tienes más de 10.000 seguidores en tus redes sociales, ponte en
-          contacto con nosotros para más información.
-        </p>
-        <summary>¿Puedo ser embajador/a de vuestra marca?</summary>
-      </details>
+      <section>
+        <!-- Aparecen las distintas preguntas y respuestas más comunes que los clientes suelen hacer. -->
+        <h3>PREGUNTAS FRECUENTES</h3>
+        <details>
+          <p>
+            En Diva MakeUp nuestros productos son 100% <em>cruelty free</em>, ya
+            que obtenemos nuestros productos de proveedoras homologadas que
+            cumplen el reglamento de la ley animal.
+          </p>
+          <summary>¿Son nuestros productos <em>cruelty free</em> ?</summary>
+        </details>
+        <br />
+        <details>
+          <p>
+            Sí, disponemos de tarjetas de regalo de 10, 50 y 100 euros además de
+            contar con tarjetas monedero las cuales se pueden recargar con la
+            cantidad deseada.
+          </p>
+          <summary>¿Se pueden comprar tarjetas de regalo?</summary>
+        </details>
+        <br />
+        <details>
+          <p>
+            Los envíos tardan de 1 a 3 días laborables en ser enviados, a partir
+            de este punto cuentas con dos paquetes de envío, el normal el cual
+            tarda 1 semana o el <em>express </em>que puede tardar de 1 a 3 días.
+            <summary>¿Cuánto tarda en llegar el envío a casa?</summary>
+          </p>
+        </details>
+        <br />
+        <details>
+          <p>
+            A través de nuestras redes sociales o acercándote a nuestra tienda
+            física donde estaremos encantados de atenderte.
+          </p>
+          <summary>¿Cómo puedo contactar con vosotros?</summary>
+        </details>
+        <br />
+        <details>
+          <p>
+            Sí, están a disposición de todos nuestros clientes la posibilidad de
+            atención personalizada y formación en maquillaje.
+          </p>
+          <summary>¿Ofrecéis cursos personalizados?</summary>
+        </details>
+        <br />
+        <details>
+          <p>
+            Para formar parte de nuestro equipo, mande su CV a nuestro correo
+            electrónico o preséntalo en nuestra tienda física.
+          </p>
+          <summary>¿Cómo puedo trabajar con vosotros?</summary>
+        </details>
+        <br />
+        <details>
+          <p>
+            Si tienes más de 10.000 seguidores en tus redes sociales, ponte en
+            contacto con nosotros para más información.
+          </p>
+          <summary>¿Puedo ser embajador/a de vuestra marca?</summary>
+        </details>
+      </section>
       <hr />
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
@@ -169,7 +171,14 @@
           />
         </a>
       </nav>
-      <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
     </footer>
   </body>
 </html>
