--- a/index.html
+++ b/index.html
@@ -1,101 +1,165 @@
 <!DOCTYPE html>
 <html lang="es-ES">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="author"
+      content="Annabel"
+    />
+    <meta
+      name="description"
+      content="Página principal de la nuestra web"
+    />
+    <meta
+      name="keywords"
+      content="cruelty free, ofertas"
+    />
+    <title>Divas Make Up</title>
+    <link
+      rel="icon"
+      href="imagenes/logo.png"
+    />
+    <style>
+      nav {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Annabel" />
-  <meta name="description" content="Página principal de la nuestra web" />
-  <meta name="keywords" content="cruelty free, ofertas" />
-  <title>Divas Make Up</title>
-  <link rel="icon" href="imagenes/logo.png" />
-  <style>
-    nav {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  </style>
-</head>
+  <body>
+    <!-- Cabecera de la página donde aparece el logo y la navegacion -->
+    <header>
+      <nav>
+        <a href="index.html"
+          ><img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+            id="inicio"
+        /></a>
+        <a href="presentacion.html">Presentación</a>
+        <a href="pagina1.html">¿Dónde estamos?</a>
+        <a href="pagina2.html">¿Quiénes somos?</a>
+        <a href="pagina3.html">Tienda</a>
+        <a href="pagina4.html">Comparador</a>
+        <a href="pagina5.html">Presupuesto</a>
+        <a href="pagina6.html">Contacto</a>
+        <a href="pagina7.html">Preguntas Frecuentes</a>
+      </nav>
+      <hr />
+    </header>
+    <!-- Cuerpo de la página donde aparece el contenido -->
+    <main>
+      <!-- Contenido de la tienda y ofertas -->
+      <h3>PÁGINA PRINCIPAL</h3>
+      <br />
+      <!-- Parte donde se habla de nuestra tienda -->
+      <section>
+        <article>
+          <p>
+            Nuestros productos son 100% veganos ya que contamos con una política
+            muy estricta <em>cruelty free</em>.
+          </p>
+        </article>
+        <article>
+          <p>
+            Nuestros envases están hechos de plástico reciclado ya que nuestra
+            prioridad número 1 es cuidar nuestro planeta.
+          </p>
+        </article>
+        <!-- Parte donde aparecen promociones -->
+      </section>
+      <br />
+      <section>
+        <article>
+          <p>Prueba nuestro nuevo pintalabios hidratante.</p>
+        </article>
+        <article>
+          <p>Prueba nuestra nueva mascarilla de frutas tropicales.</p>
+        </article>
+      </section>
 
-<body>
-  <!-- Cabecera de la página donde aparece el logo y la navegacion -->
-  <header>
-    <nav>
-      <a href="index.html"><img src="imagenes/logo.png" alt="Logo DivasMakeUp" width="100" height="100"
-          title="Logo DivasMakeUp" id="inicio" /></a>
-      <a href="presentacion.html">Presentación</a>
-      <a href="pagina1.html">¿Dónde estamos?</a>
-      <a href="pagina2.html">¿Quiénes somos?</a>
-      <a href="pagina3.html">Tienda</a>
-      <a href="pagina4.html">Comparador</a>
-      <a href="pagina5.html">Presupuesto</a>
-      <a href="pagina6.html">Contacto</a>
-      <a href="pagina7.html">Preguntas Frecuentes</a>
-    </nav>
-    <hr />
-  </header>
-  <!-- Cuerpo de la página donde aparece el contenido -->
-  <main>
-    <!-- Contenido de la tienda y ofertas -->
-    <h3>PÁGINA PRINCIPAL</h3>
-    <br />
-    <!-- Parte donde se habla de nuestra tienda -->
-    <section>
-      <article>
-        <p>
-          Nuestros productos son 100% veganos ya que contamos con una política
-          muy estricta <em>cruelty free</em>.
-        </p>
-      </article>
-      <article>
-        <p>
-          Nuestros envases están hechos de plástico reciclado ya que nuestra
-          prioridad número 1 es cuidar nuestro planeta.
-        </p>
-      </article>
-      <!-- Parte donde aparecen promociones -->
-    </section>
-    <br />
-    <section>
-      <article>
-        <p>Prueba nuestro nuevo pintalabios hidratante.</p>
-      </article>
-      <article>
-        <p>Prueba nuestra nueva mascarilla de frutas tropicales.</p>
-      </article>
-    </section>
+      <!-- Parte donde aparecen ofertas y el calendario de cursos -->
+      <aside>
+        <h2>OFERTAS</h2>
+        <iframe
+          src="https://calendar.google.com/calendar/embed?src=c_4328d9383a17410a02f2c553cfc894efafd03b873cf37fad0536de3368685a7c%40group.calendar.google.com&ctz=Europe%2FMadrid"
+          style="border: 0"
+          width="500"
+          height="500"
+          frameborder="0"
+          scrolling="no"
+        ></iframe>
+      </aside>
+      <hr />
+    </main>
+    <!-- Pie de la página donde aparecen las redes sociales -->
+    <footer>
+      <h2>Nuestras redes sociales</h2>
+      <nav>
+        <a href="#inicio">
+          <img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+          />
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo insta.png"
+            alt="Logo de Instagram"
+            width="100"
+            height="100"
+            title="Logo Insta"
+          />
+        </a>
+        <a
+          href="https://www.tiktok.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo tiktok.png"
+            alt="Logo de Tiktok"
+            width="100"
+            height="100"
+            title="Logo Tiktok"
+          />
+        </a>
+        <a
+          href="https://www.youtube.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo youtube.jpg"
+            alt="Logo de YouTube"
+            width="100"
+            height="100"
+            title="Logo Youtube"
+          />
+        </a>
+      </nav>
 
-    <!-- Parte donde aparecen ofertas y el calendario de cursos -->
-    <aside>
-      <h2>OFERTAS</h2>
-      <iframe
-        src="https://calendar.google.com/calendar/embed?src=c_4328d9383a17410a02f2c553cfc894efafd03b873cf37fad0536de3368685a7c%40group.calendar.google.com&ctz=Europe%2FMadrid"
-        style="border: 0" width="500" height="500" frameborder="0" scrolling="no"></iframe>
-    </aside>
-    <hr />
-  </main>
-  <!-- Pie de la página donde aparecen las redes sociales -->
-  <footer>
-    <h2>Nuestras redes sociales</h2>
-    <nav>
-      <a href="#inicio">
-        <img src="imagenes/logo.png" alt="Logo DivasMakeUp" width="100" height="100" title="Logo DivasMakeUp" />
-      </a>
-      <a href="https://www.instagram.com/" target="_blank">
-        <img src="imagenes/logo insta.png" alt="Logo de Instagram" width="100" height="100" title="Logo Insta" />
-      </a>
-      <a href="https://www.tiktok.com/" target="_blank">
-        <img src="imagenes/logo tiktok.png" alt="Logo de Tiktok" width="100" height="100" title="Logo Tiktok" />
-      </a>
-      <a href="https://www.youtube.com/" target="_blank">
-        <img src="imagenes/logo youtube.jpg" alt="Logo de YouTube" width="100" height="100" title="Logo Youtube" />
-      </a>
-    </nav>
-
-    <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
-
-  </footer>
-</body>
-
+      <p>
+        <q>
+          <em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          >
+        </q>
+      </p>
+    </footer>
+  </body>
 </html>
