--- a/pagina6.html
+++ b/pagina6.html
@@ -1,142 +1,258 @@
 <!DOCTYPE html>
 <html lang="es-ES">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="author"
+      content="Noemí"
+    />
+    <meta
+      name="description"
+      content="Página para contactar con nosotras"
+    />
+    <meta
+      name="keywords"
+      content="nombre, email, telefono"
+    />
+    <title>Contacto</title>
+    <link
+      rel="icon"
+      href="imagenes/logo.png"
+    />
+    <style>
+      nav {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Noemí" />
-  <meta name="description" content="Página para contactar con nosotras" />
-  <meta name="keywords" content="nombre, email, telefono" />
-  <title>Contacto</title>
-  <link rel="icon" href="imagenes/logo.png" />
-  <style>
-    nav {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  </style>
-</head>
+  <body>
+    <!-- Cabecera de la página donde aparece el logo y la navegacion -->
+    <header>
+      <nav>
+        <a href="index.html"
+          ><img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+            id="inicio"
+        /></a>
+        <a href="presentacion.html">Presentación</a>
+        <a href="pagina1.html">¿Dónde estamos?</a>
+        <a href="pagina2.html">¿Quiénes somos?</a>
+        <a href="pagina3.html">Tienda</a>
+        <a href="pagina4.html">Comparador</a>
+        <a href="pagina5.html">Presupuesto</a>
+        <a href="pagina6.html">Contacto</a>
+        <a href="pagina7.html">Preguntas Frecuentes</a>
+      </nav>
+      <hr />
+    </header>
+    <!-- Cuerpo de la página donde aparece el contenido -->
+    <main>
+      <section>
+        <!--Permitimos poner música-->
+        <p>¿Te apetece escuchar música relajante de fondo?</p>
+        <audio controls>
+          <source
+            src="musicaVideo/ambientemusica.mp3"
+            type="audio/mp3"
+          />
+          <source
+            src="musicaVideo/ambientemusica.ogg"
+            type="audio/ogg"
+          />
+          Audio no soportado
+        </audio>
+      </section>
+      <section>
+        <!--Primer formualario con fieldset (nombre apellidos y fecha de nacimiento)-->
+        <form
+          action="procesamiento_formulario.php"
+          method="post"
+        >
+          <fieldset>
+            <legend><strong>FORMULARIO DE CONTACTO</strong></legend>
+            <p>
+              <strong>Nombre:</strong>
+              <input
+                type="text"
+                name="nombre"
+                size="25"
+                required
+              />
+            </p>
+            <br />
+            <p>
+              <strong>Apellidos:</strong>
+              <input
+                type="text"
+                name="apellidos"
+                size="25"
+                required
+              />
+            </p>
+            <br />
+            <p>
+              <strong>Fecha de nacimiento:</strong>
+              <input
+                type="date"
+                name="fecha"
+                size="25"
+                required
+              />
+            </p>
+            <br />
+          </fieldset>
+          <br />
 
-<body>
-  <!-- Cabecera de la página donde aparece el logo y la navegacion -->
-  <header>
-    <nav>
-      <a href="index.html"><img src="imagenes/logo.png" alt="Logo DivasMakeUp" width="100" height="100"
-          title="Logo DivasMakeUp" id="inicio" /></a>
-      <a href="presentacion.html">Presentación</a>
-      <a href="pagina1.html">¿Dónde estamos?</a>
-      <a href="pagina2.html">¿Quiénes somos?</a>
-      <a href="pagina3.html">Tienda</a>
-      <a href="pagina4.html">Comparador</a>
-      <a href="pagina5.html">Presupuesto</a>
-      <a href="pagina6.html">Contacto</a>
-      <a href="pagina7.html">Preguntas Frecuentes</a>
-    </nav>
-    <hr />
-  </header>
-  <!-- Cuerpo de la página donde aparece el contenido -->
-  <main>
-    <!--Permitimos poner música-->
-    <p>¿Te apetece escuchar música relajante de fondo?</p>
-    <audio controls>
-      <source src="musicaVideo/ambientemusica.mp3" type="audio/mp3" />
-      <source src="musicaVideo/ambientemusica.ogg" type="audio/ogg" />
-      Audio no soportado
-    </audio>
+          <!--Segundo formualario con fieldset (email y número de teléfono)-->
+          <fieldset>
+            <legend>
+              <h3>MÉTODOS DE CONTACTO</h3>
+            </legend>
+            <p>
+              <strong>Email:</strong>
+              <input
+                type="email"
+                name="email"
+                size="30"
+              />
+            </p>
+            <br />
+            <p>
+              <strong>Número de teléfono:</strong>
+              <input
+                type="text"
+                name="telefono"
+                size="25"
+                pattern="[0-9]{9}"
+                required
+              />
+            </p>
+            <br />
+          </fieldset>
+          <br />
 
-    <!--Primer formualario con fieldset (nombre apellidos y fecha de nacimiento)-->
-    <form action="procesamiento_formulario.php" method="post">
-      <fieldset>
-        <legend><strong>FORMULARIO DE CONTACTO</strong></legend>
-        <p>
-          <strong>Nombre:</strong>
-          <input type="text" name="nombre" size="25" required />
-        </p>
-        <br />
-        <p>
-          <strong>Apellidos:</strong>
-          <input type="text" name="apellidos" size="25" required />
-        </p>
-        <br />
-        <p> 
-          <strong>Fecha de nacimiento:</strong>
-          <input type="date" name="fecha" size="25" required />
-        </p>
-        <br />
-      </fieldset>
+          <!--Tercer y último formualario con fieldset (provincia y motivo de consulta)-->
+          <fieldset>
+            <legend>
+              <h3>¿DESDE DÓNDE NOS CONTACTA Y POR QUÉ?</h3>
+            </legend>
+            <p>
+              <strong>Seleccione su provincia de Andalucía</strong>
+            </p>
+            <select
+              name="provincias"
+              size="1"
+            >
+              <option
+                value="1"
+                selected
+              >
+                Málaga
+              </option>
+              <option value="2">Sevilla</option>
+              <option value="3">Córdoba</option>
+              <option value="4">Jaén</option>
+              <option value="5">Almería</option>
+              <option value="6">Cádiz</option>
+              <option value="7">Huelva</option>
+              <option value="8">Granada</option>
+            </select>
+
+            <br />
+
+            <p><strong>¿Cuál es el motivo de su consulta?</strong></p>
+            <textarea
+              name="consulta"
+              rows="5"
+              cols="40"
+              maxlength="300"
+              placeholder="Describe aquí el motivo de consulta"
+              required
+            ></textarea>
+          </fieldset>
+          <br />
+          <input
+            type="submit"
+            value="Enviar"
+          />
+          <input
+            type="reset"
+            value="Borrar"
+          />
+        </form>
+      </section>
       <br />
-
-      <!--Segundo formualario con fieldset (email y número de teléfono)-->
-      <fieldset>
-        <legend>
-          <h3>MÉTODOS DE CONTACTO</h3>
-        </legend>
-        <p>
-          <strong>Email:</strong>
-          <input type="email" name="email" size="30" />
-        </p>
-        <br />
-        <p>
-          <strong>Número de teléfono:</strong>
-          <input type="text" name="telefono" size="25" pattern="[0-9]{9}" required />
-        </p>
-        <br />
-      </fieldset>
-      <br />
-
-      <!--Tercer y último formualario con fieldset (provincia y motivo de consulta)-->
-      <fieldset>
-        <legend>
-          <h3>¿DESDE DÓNDE NOS CONTACTA Y POR QUÉ?</h3>
-        </legend>
-        <p>
-          <strong>Seleccione su provincia de Andalucía</strong></p>
-        <select name="provincias" size="1">
-          <option value="1" selected>
-            Málaga
-          </option>
-          <option value="2">Sevilla</option>
-          <option value="3">Córdoba</option>
-          <option value="4">Jaén</option>
-          <option value="5">Almería</option>
-          <option value="6">Cádiz</option>
-          <option value="7">Huelva</option>
-          <option value="8">Granada</option>
-        </select>
-
-        <br />
-
-        <p><strong>¿Cuál es el motivo de su consulta?</strong></p>
-        <textarea name="consulta" rows="5" cols="40" maxlength="300"
-          placeholder="Describe aquí el motivo de consulta"></textarea>
-      </fieldset>
-      <br />
-      <input type="submit" value="Enviar" />
-      <input type="reset" value="Borrar" />
-    </form>
-    <br>
-    <hr />
-  </main>
-  <!-- Pie de la página donde aparecen las redes sociales -->
-  <footer>
-    <h2>Nuestras redes sociales</h2>
-    <nav>
-      <a href="#inicio">
-        <img src="imagenes/logo.png" alt="Logo DivasMakeUp" width="100" height="100" title="Logo DivasMakeUp" />
-      </a>
-      <a href="https://www.instagram.com/" target="_blank">
-        <img src="imagenes/logo insta.png" alt="Logo de Instagram" width="100" height="100" title="Logo Insta" />
-      </a>
-      <a href="https://www.tiktok.com/" target="_blank">
-        <img src="imagenes/logo tiktok.png" alt="Logo de Tiktok" width="100" height="100" title="Logo Tiktok" />
-      </a>
-      <a href="https://www.youtube.com/" target="_blank">
-        <img src="imagenes/logo youtube.jpg" alt="Logo de YouTube" width="100" height="100" title="Logo Youtube" />
-      </a>
-    </nav>
-    <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
-  </footer>
-</body>
-
+      <hr />
+    </main>
+    <!-- Pie de la página donde aparecen las redes sociales -->
+    <footer>
+      <h2>Nuestras redes sociales</h2>
+      <nav>
+        <a href="#inicio">
+          <img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+          />
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo insta.png"
+            alt="Logo de Instagram"
+            width="100"
+            height="100"
+            title="Logo Insta"
+          />
+        </a>
+        <a
+          href="https://www.tiktok.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo tiktok.png"
+            alt="Logo de Tiktok"
+            width="100"
+            height="100"
+            title="Logo Tiktok"
+          />
+        </a>
+        <a
+          href="https://www.youtube.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo youtube.jpg"
+            alt="Logo de YouTube"
+            width="100"
+            height="100"
+            title="Logo Youtube"
+          />
+        </a>
+      </nav>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
+    </footer>
+  </body>
 </html>
