--- a/presentacion.html
+++ b/presentacion.html
@@ -19,58 +19,137 @@
       content="logo, video"
     />
     <title>Presentación inicial</title>
-    <title>¿Quienes somos?</title>
     <link
       rel="icon"
       href="imagenes/logo.png"
     />
+    <style>
+      nav {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    </style>
   </head>
 
   <body>
-    <!--Cita de Coco Chanel-->
-    <blockquote>
-    <p>Como dijo Coco Chanel: <q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
-    </blockquote>
+    <main>
+      <!--Cita de Coco Chanel-->
+      <blockquote>
+        <p>
+          Como dijo Coco Chanel:
+          <q
+            ><em
+              >La belleza comienza en el momento en el que decides ser tú
+              misma.</em
+            ></q
+          >
+        </p>
+      </blockquote>
 
+      <section>
+        <!--Logo-->
+        <h2>Os presentamos nuestro logo</h2>
+        <a href="index.html">
+          <!--Con enlace a la página principal-->
+          <img
+            src="imagenes/logo.png"
+            height="400"
+            width="300"
+            alt="logo"
+          />
+        </a>
+      </section>
 
-    <!--Logo-->
-    <h2>Os presentamos nuestro logo</h2>
-    <a href="index.html">
-      <!--Con enlace a la página principal-->
-      <img
-        src="imagenes/logo.png"
-        height="400"
-        width="300"
-        alt="logo"
-      />
-    </a>
+      <section>
+        <!--Video de presentación-->
+        <h2>VÍDEO DE PRESENTACIÓN &#127909;</h2>
+        <!--Controls para poder darle al altavoz y escuchar la música-->
+        <video
+          src="musicaVideo/videopresentacion.mp4"
+          autoplay
+          muted
+          controls
+          width="800"
+          height="600"
+          poster="imagenes/video foto presentacion.png"
+        >
+          <source
+            src="musicaVideo/videopresentacion.mp4"
+            type="video/mp4"
+          />
+          <source
+            src="videopresentacion.ogg"
+            src="musicaVideo/videopresentacion.ogg"
+            type="video/ogg"
+          />
+          <source
+            src="musicaVideo/videopresentacion.webm"
+            type="video/webm"
+          />
+          Video no soportado
+        </video>
+      </section>
+    </main>
+    <!-- Pie de la página donde aparecen las redes sociales -->
+    <footer>
+      <h2>Nuestras redes sociales</h2>
+      <nav>
+        <a href="#inicio">
+          <img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+          />
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo insta.png"
+            alt="Logo de Instagram"
+            width="100"
+            height="100"
+            title="Logo Insta"
+          />
+        </a>
+        <a
+          href="https://www.tiktok.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo tiktok.png"
+            alt="Logo de Tiktok"
+            width="100"
+            height="100"
+            title="Logo Tiktok"
+          />
+        </a>
+        <a
+          href="https://www.youtube.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo youtube.jpg"
+            alt="Logo de YouTube"
+            width="100"
+            height="100"
+            title="Logo Youtube"
+          />
+        </a>
+      </nav>
 
-    <!--Video de presentación-->
-    <h2>VÍDEO DE PRESENTACIÓN &#127909;</h2>
-    <!--Controls para poder darle al altavoz y escuchar la música-->
-    <video
-      src="musicaVideo/videopresentacion.mp4"
-      autoplay
-      muted
-      controls
-      width="800"
-      height="600"
-      poster="imagenes/video foto presentacion.png"
-    >
-      <source
-        src="musicaVideo/videopresentacion.mp4"
-        type="video/mp4"
-      />
-      <source
-        src="videopresentacion.ogg"
-        src="musicaVideo/videopresentacion.ogg"
-        type="video/ogg"
-      />
-      <source
-        src="musicaVideo/videopresentacion.webm"
-        type="video/webm"
-      />
-      Video no soportado
-    </video>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
+    </footer>
   </body>
 </html>
