On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   icons/github.svg
	new file:   icons/instagram.svg
	new file:   icons/tiktok.svg
	new file:   icons/youtube.svg
	new file:   index.css
	modified:   index.html
	new file:   pagina2.css
	modified:   pagina2.html
	new file:   presentacion.css
	modified:   presentacion.html

--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
       rel="icon"
       href="imagenes/logo.png"
     />
-    <style>
-      nav {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="index.css"
+    />
   </head>
 
   <body>
@@ -60,9 +57,8 @@
     <main>
       <!-- Contenido de la tienda y ofertas -->
       <h3>PÁGINA PRINCIPAL</h3>
-      <br />
       <!-- Parte donde se habla de nuestra tienda -->
-      <section>
+      <section id="informacion">
         <article>
           <p>
             Nuestros productos son 100% veganos ya que contamos con una política
@@ -75,10 +71,9 @@
             prioridad número 1 es cuidar nuestro planeta.
           </p>
         </article>
-        <!-- Parte donde aparecen promociones -->
       </section>
-      <br />
-      <section>
+      <!-- Parte donde aparecen promociones -->
+      <section id="promociones">
         <article>
           <p>Prueba nuestro nuevo pintalabios hidratante.</p>
         </article>
@@ -86,20 +81,18 @@
           <p>Prueba nuestra nueva mascarilla de frutas tropicales.</p>
         </article>
       </section>
-
       <!-- Parte donde aparecen ofertas y el calendario de cursos -->
       <aside>
         <h2>OFERTAS</h2>
         <iframe
           src="https://calendar.google.com/calendar/embed?src=c_4328d9383a17410a02f2c553cfc894efafd03b873cf37fad0536de3368685a7c%40group.calendar.google.com&ctz=Europe%2FMadrid"
           style="border: 0"
-          width="500"
-          height="500"
+          width="250"
+          height="250"
           frameborder="0"
           scrolling="no"
         ></iframe>
       </aside>
-      <hr />
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
