--- a/pagina2.html
+++ b/pagina2.html
@@ -7,29 +7,26 @@
       content="width=device-width, initial-scale=1.0"
     />
     <meta
-    name="author"
-    content="Annabel"
-  />
-  <meta
-    name="description"
-    content="Página de información sobre nosotras y lo que hemos hecho"
-  />
-  <meta
-    name="keywords"
-    content="Annabel, Noemí, Celia"
-  />
+      name="author"
+      content="Annabel"
+    />
+    <meta
+      name="description"
+      content="Página de información sobre nosotras y lo que hemos hecho"
+    />
+    <meta
+      name="keywords"
+      content="Annabel, Noemí, Celia"
+    />
     <title>¿Quienes somos?</title>
     <link
-    rel="icon"
-    href="imagenes/logo.png"
-  />
-    <style>
-        nav {
-          display: flex;
-          justify-content: space-evenly;
-          align-items: center;
-        }
-      </style>
+      rel="icon"
+      href="imagenes/logo.png"
+    />
+    <link
+      rel="stylesheet"
+      href="pagina2.css"
+    />
   </head>
   <body>
     <!-- Cabecera de la página donde aparece el logo y la navegacion -->
@@ -53,86 +50,136 @@
         <a href="pagina6.html">Contacto</a>
         <a href="pagina7.html">Preguntas Frecuentes</a>
       </nav>
-      <hr>
+      <hr />
     </header>
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
-        <!-- Parte donde nos presentamos nosotras y lo que hemos hecho en el trabajo -->
-        <h2>¿Quiénes somos?</h2>
-        <section>
-            <article>
-                 <dfn title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"><h3>Noemí</h3> </dfn>
-                <img src="imagenes/Foto noemí.jpg" alt="Foto de Noemí"  height="300" title="Foto de Noemí">
-                <p>Noemí Ruiz Toro es nuestra integrante número 1</p> <p>y se ha encargado de la realización de las páginas </p>de presentación inicial, la página de la tienda y la</p><p> página de formulario de contacto además de </p>ayudar a sus compañeras con cualquier dificultad.</p>
-            </article>
-            <hr>
-            <article>
-              <dfn title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"><h3>Annabel</h3> </dfn>
-                <img src="imagenes/foto annabel.jpg" alt="Foto de Annabel" height="300" title="Foto de Annabel">
-                <p>Annabel Suárez León es nuestra integrante</p><p>número 2 y se ha encargado de la realización de </p><p>las páginas de index, la página de ¿quiénes somos?,</p> <p>la página de preguntas frecuentes y diseñar el </p><p>logotipo además de ayudar a sus compañeras con</p><p> cualquier dificultad.</p>
-            </article>
-            <hr>
-            <article>
-              <dfn title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"><h3>Celia</h3> </dfn>
-                <img src="imagenes/foto celia.jpg" alt="Foto de Celia" height="300" title="Foto de Celia">
-                <p>Celia Molina Leal es nuestra integrante número 3</p><p> y se ha encargado de la realización de las páginas</p><p> de ¿dónde estamos?, la página de comparativa de </p><p>productos y la página de formulario de presupuesto</p> además de ayudar a sus compañeras con cualquier</p><p> dificultad.  </p>
-            </article>
-        </section>
-        <hr>
+      <!-- Parte donde nos presentamos nosotras y lo que hemos hecho en el trabajo -->
+      <h2>¿Quiénes somos?</h2>
+      <br />
+      <section>
+        <article>
+          <img
+            class="cambiarFoco"
+            src="imagenes/Foto noemí.jpg"
+            alt="Foto de Noemí"
+            title="Foto de Noemí"
+          />
+          <div class="contenido">
+            <dfn
+              title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"
+              ><h3>Noemí</h3>
+            </dfn>
+            <p>
+              Noemí Ruiz Toro es nuestra integrante número 1 y se ha encargado
+              de la realización de las páginas de presentación inicial, la
+              página de la tienda y la página de formulario de contacto además
+              de ayudar a sus compañeras con cualquier dificultad.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img
+            class="cambiarFoco"
+            src="imagenes/foto annabel.jpg"
+            alt="Foto de Annabel"
+            title="Foto de Annabel"
+          />
+          <div class="contenido">
+            <dfn
+              title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"
+              ><h3>Annabel</h3>
+            </dfn>
+            <p>
+              Annabel Suárez León es nuestra integrante número 2 y se ha
+              encargado de la realización de las páginas de index, la página de
+              ¿quiénes somos?, la página de preguntas frecuentes y diseñar el
+              logotipo además de ayudar a sus compañeras con cualquier
+              dificultad.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img
+            src="imagenes/foto celia.jpg"
+            alt="Foto de Celia"
+            title="Foto de Celia"
+          />
+          <div class="contenido">
+            <dfn
+              title="Ninguna de nosotras es tan fuerte como todas nosotras juntas"
+              ><h3>Celia</h3>
+            </dfn>
+            <p>
+              Celia Molina Leal es nuestra integrante número 3 y se ha encargado
+              de la realización de las páginas de ¿dónde estamos?, la página de
+              comparativa de productos y la página de formulario de presupuesto
+              además de ayudar a sus compañeras con cualquier dificultad.
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
-        <h2>Nuestras redes sociales</h2>
-        <nav>
+      <h2>Nuestras redes sociales</h2>
+      <nav>
+        <a href="#inicio">
+          <img
+            src="imagenes/logo.png"
+            alt="Logo DivasMakeUp"
+            width="100"
+            height="100"
+            title="Logo DivasMakeUp"
+          />
+        </a>
         <a
-        href="#inicio"
-      >
-        <img
-          src="imagenes/logo.png"
-          alt="Logo DivasMakeUp"
-          width="100"
-          height="100"
-          title="Logo DivasMakeUp"
-        />
-      </a>
-      <a
-        href="https://www.instagram.com/"
-        target="_blank"
-      >
-        <img
-          src="imagenes/logo insta.png"
-          alt="Logo de Instagram"
-          width="100"
-          height="100"
-          title="Logo Insta"
-        />
-      </a>
-      <a
-        href="https://www.tiktok.com/"
-        target="_blank"
-      >
-        <img
-          src="imagenes/logo tiktok.png"
-          alt="Logo de Tiktok"
-          width="100"
-          height="100"
-          title="Logo Tiktok"
-        />
-      </a>
-      <a
-        href="https://www.youtube.com/"
-        target="_blank"
-      >
-        <img
-          src="imagenes/logo youtube.jpg"
-          alt="Logo de YouTube"
-          width="100"
-          height="100"
-          title="Logo Youtube"
-        />
-      </a>
-    </nav>
-    <p><q><em>La belleza comienza en el momento en el que decides ser tú misma.</em></q> </p>
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo insta.png"
+            alt="Logo de Instagram"
+            width="100"
+            height="100"
+            title="Logo Insta"
+          />
+        </a>
+        <a
+          href="https://www.tiktok.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo tiktok.png"
+            alt="Logo de Tiktok"
+            width="100"
+            height="100"
+            title="Logo Tiktok"
+          />
+        </a>
+        <a
+          href="https://www.youtube.com/"
+          target="_blank"
+        >
+          <img
+            src="imagenes/logo youtube.jpg"
+            alt="Logo de YouTube"
+            width="100"
+            height="100"
+            title="Logo Youtube"
+          />
+        </a>
+      </nav>
+      <p>
+        <q
+          ><em
+            >La belleza comienza en el momento en el que decides ser tú
+            misma.</em
+          ></q
+        >
+      </p>
     </footer>
   </body>
 </html>
