--- a/presentacion.html
+++ b/presentacion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ES">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -23,47 +23,44 @@
       rel="icon"
       href="imagenes/logo.png"
     />
-    <style>
-      nav {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="presentacion.css"
+    />
   </head>
 
   <body>
     <main>
-      <!--Cita de Coco Chanel-->
-      <blockquote>
-        <p>
-          Como dijo Coco Chanel:
-          <q
-            ><em
-              >La belleza comienza en el momento en el que decides ser tú
-              misma.</em
-            ></q
-          >
-        </p>
-      </blockquote>
-
-      <section>
+      <section id="frase">
         <!--Logo-->
-        <h2>Os presentamos nuestro logo</h2>
-        <a href="index.html">
-          <!--Con enlace a la página principal-->
-          <img
-            src="imagenes/logo.png"
-            height="400"
-            width="300"
-            alt="logo"
-          />
-        </a>
+        <article id="logo">
+          <a href="index.html">
+            <!--Con enlace a la página principal-->
+            <img
+              src="imagenes/logo.png"
+              height="400"
+              width="300"
+              alt="logo"
+            />
+          </a>
+        </article>
+
+        <!--Cita de Coco Chanel-->
+        <blockquote id="cocoChanel">
+          <p>
+            Como dijo Coco Chanel:
+            <q
+              ><em
+                >La belleza comienza en el momento en el que decides ser tú
+                misma.</em
+              ></q
+            >
+          </p>
+        </blockquote>
       </section>
 
-      <section>
+      <section id="video">
         <!--Video de presentación-->
-        <h2>VÍDEO DE PRESENTACIÓN &#127909;</h2>
         <!--Controls para poder darle al altavoz y escuchar la música-->
         <video
           src="musicaVideo/videopresentacion.mp4"
@@ -93,7 +90,6 @@
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
-      <h2>Nuestras redes sociales</h2>
       <nav>
         <a href="#inicio">
           <img
@@ -109,7 +105,7 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo insta.png"
+            src="icons/instagram.svg"
             alt="Logo de Instagram"
             width="100"
             height="100"
@@ -121,7 +117,7 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo tiktok.png"
+            src="icons/tiktok.svg"
             alt="Logo de Tiktok"
             width="100"
             height="100"
@@ -133,7 +129,7 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo youtube.jpg"
+            src="icons/youtube.svg"
             alt="Logo de YouTube"
             width="100"
             height="100"
