On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,33 @@
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
       <!-- Contenido de la tienda y ofertas -->
-      <h3>PÁGINA PRINCIPAL</h3>
+      <section class="cards">
+        <img
+          class="imagen"
+          src="imagenes/cara_mascarilla_rosa.png"
+          alt="Imagen1"
+        />
+        <img
+          class="imagen"
+          src="imagenes/ojos_hypnose_drama.png"
+          alt="Imagen2"
+        />
+        <img
+          class="imagen"
+          src="imagenes/descarga.jpg"
+          alt="Imagen3"
+        />
+        <img
+          class="imagen"
+          src="imagenes/labios_fenty.png"
+          alt="Imagen4"
+        />
+        <img
+          class="imagen"
+          src="imagenes/ojos_lash_idole.png"
+          alt="Imagen4"
+        />
+      </section>
       <!-- Parte donde se habla de nuestra tienda -->
       <section id="informacion">
         <article>
