On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   estilosGlobales.css
	modified:   imagenes/cara_mascarilla_rosa.png
	modified:   imagenes/cara_mascarilla_verde.png
	deleted:    imagenes/descarga (1).jpg
	new file:   imagenes/descarga(1).png
	deleted:    imagenes/descarga.jpg
	new file:   imagenes/descarga.png
	modified:   imagenes/labios_fenty.png
	deleted:    imagenes/logo insta.png
	deleted:    imagenes/logo tiktok.png
	deleted:    imagenes/logo youtube.jpg
	modified:   imagenes/ojos_hypnose_drama.png
	modified:   imagenes/ojos_lash_idole.png
	modified:   index.css
	modified:   index.html
	new file:   pagina1.css
	modified:   pagina1.html
	modified:   pagina2.css
	modified:   pagina2.html
	new file:   pagina3.css
	modified:   pagina3.html
	new file:   pagina4.css
	modified:   pagina4.html
	new file:   pagina5.css
	modified:   pagina5.html
	new file:   pagina6.css
	modified:   pagina6.html
	new file:   pagina7.css
	modified:   pagina7.html
	modified:   presentacion.html

--- a/presentacion.html
+++ b/presentacion.html
@@ -91,7 +91,10 @@
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
-        <a href="#inicio">
+        <a
+          href="#inicio"
+          class="logo"
+        >
           <img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
