--- a/pagina5.html
+++ b/pagina5.html
@@ -23,20 +23,18 @@
       rel="icon"
       href="imagenes/logo.png"
     />
-
-    <style>
-      nav {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="pagina5.css"
+    />
   </head>
   <body>
     <!-- Cabecera de la página donde aparece el logo y la navegacion -->
     <header>
-      <nav>
-        <a href="index.html"
+      <nav class="navegacion1">
+        <a
+          href="index.html"
+          class="logo"
           ><img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
@@ -46,15 +44,54 @@
             id="inicio"
         /></a>
         <a href="presentacion.html">Presentación</a>
-        <a href="pagina1.html">¿Dónde estamos?</a>
-        <a href="pagina2.html">¿Quiénes somos?</a>
-        <a href="pagina3.html">Tienda</a>
+
+        <a href="pagina2.html"> ¿Quiénes somos?</a>
+        <a href="pagina3.html"> Tienda</a>
         <a href="pagina4.html">Comparador</a>
         <a href="pagina5.html">Presupuesto</a>
-        <a href="pagina6.html">Contacto</a>
-        <a href="pagina7.html">Preguntas Frecuentes</a>
       </nav>
-      <hr />
+      <nav class="navegacion2">
+        <a href="pagina1.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-shop"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"
+            /></svg
+        ></a>
+        <a href="pagina6.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-envelope"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"
+            /></svg
+        ></a>
+        <a href="pagina7.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-question-lg"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14"
+            /></svg
+        ></a>
+      </nav>
     </header>
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
@@ -568,9 +605,11 @@
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
-      <h2>Nuestras redes sociales</h2>
       <nav>
-        <a href="#inicio">
+        <a
+          href="#inicio"
+          class="logo"
+        >
           <img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
@@ -584,10 +623,8 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo insta.png"
+            src="icons/instagram.svg"
             alt="Logo de Instagram"
-            width="100"
-            height="100"
             title="Logo Insta"
           />
         </a>
@@ -596,10 +633,8 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo tiktok.png"
+            src="icons/tiktok.svg"
             alt="Logo de Tiktok"
-            width="100"
-            height="100"
             title="Logo Tiktok"
           />
         </a>
@@ -608,14 +643,13 @@
           target="_blank"
         >
           <img
-            src="imagenes/logo youtube.jpg"
+            src="icons/youtube.svg"
             alt="Logo de YouTube"
-            width="100"
-            height="100"
             title="Logo Youtube"
           />
         </a>
       </nav>
+
       <p>
         <q
           ><em
