On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   estilosGlobales.css
	new file:   fuentes/ComicRelief-Bold.ttf
	new file:   fuentes/ComicRelief-Regular.ttf
	new file:   fuentes/OFL.txt
	new file:   fuentes/fuenteComun/OFL.txt
	new file:   fuentes/fuenteComun/Quicksand-VariableFont_wght.ttf
	new file:   fuentes/fuenteComun/README.txt
	new file:   fuentes/fuenteComun/static/Quicksand-Bold.ttf
	new file:   fuentes/fuenteComun/static/Quicksand-Light.ttf
	new file:   fuentes/fuenteComun/static/Quicksand-Medium.ttf
	new file:   fuentes/fuenteComun/static/Quicksand-Regular.ttf
	new file:   fuentes/fuenteComun/static/Quicksand-SemiBold.ttf
	new file:   imagenes/banner_ojos.jpg
	new file:   imagenes/banner_ojos_2.jpg
	new file:   imagenes/pintalabios_banner.jpg
	new file:   imagenes/unas_banner.jpg
	modified:   index.css
	modified:   index.html
	modified:   pagina1.css
	modified:   pagina1.html
	modified:   pagina2.html
	modified:   pagina3.css
	modified:   pagina3.html
	modified:   pagina4.css
	modified:   pagina4.html
	modified:   pagina5.css
	modified:   pagina5.html
	modified:   pagina6.css
	modified:   pagina6.html
	modified:   pagina7.css
	modified:   pagina7.html
	modified:   presentacion.css
	modified:   presentacion.html

--- a/pagina5.html
+++ b/pagina5.html
@@ -138,7 +138,7 @@
               contigo!</em
             >
           </p>
-          <p>
+          <p class="obligatorio">
             <strong> Nombre </strong>
             <input
               type="text"
@@ -147,12 +147,12 @@
               required
             />
           </p>
-          <p>
+          <p class="obligatorio">
             <strong> Teléfono </strong>
             <input type="text" name="telefono" size="25" pattern="[0-9]{9}" r
             required
           </p>
-          <p>
+          <p class="obligatorio">
             <strong> Email </strong>
             <input
               type="email"
@@ -173,7 +173,7 @@
               value="40"
               max="100"
             ></progress>
-            <em>Elige tu en que y cuanto quieres gastarte</em>
+            <em>Elige tu en qué y cuanto quieres gastarte</em>
           </p>
           <p>
             <strong> Rango precio </strong>
@@ -263,7 +263,7 @@
             <em>Customiza tus productos en función a tus necesidades.</em>
           </p>
           <!-- Parte donde se personalizan los productos de los ojos -->
-          <fieldset>
+          <fieldset id="ojos">
             <legend><h3>Ojos</h3></legend>
             <h4>Hypnôse Drama</h4>
             <p>
@@ -338,9 +338,8 @@
               />
             </p>
           </fieldset>
-          <br />
           <!-- Parte donde se personalizan los productos de los labios -->
-          <fieldset>
+          <fieldset id="labios">
             <legend>
               <h3>Labios</h3>
             </legend>
@@ -464,9 +463,8 @@
               />
             </p>
           </fieldset>
-          <br />
           <!-- Parte donde se personalizan los productos de las uñas -->
-          <fieldset>
+          <fieldset id="unias">
             <legend>
               <h3>Uñas</h3>
             </legend>
@@ -607,12 +605,19 @@
             ></textarea>
           </p>
         </fieldset>
-        <input
-          type="reset"
-          name="borrar"
-          value="Borrar"
-        />
-        <input type="submit" />
+        <div class="botones">
+          <input
+            type="reset"
+            name="borrar"
+            value="Borrar"
+            class="boton"
+          />
+          <input
+            type="submit"
+            class="boton"
+          />
+        </div>
+
         <p>
           <progress
             value="100"
@@ -625,16 +630,6 @@
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
-        <a
-          href="#inicio"
-          class="enlaceLogo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
         <a
           href="https://www.instagram.com/"
           target="_blank"
@@ -688,7 +683,12 @@
         </a>
       </nav>
 
+      <p>&copy; 2025 Divas-Makeup. Todos los derechos reservados.</p>
       <p>
+        Divas-Makeup es una marca dedicada a la belleza profesional, el
+        maquillaje artístico y la asesoría de imagen personalizada.
+      </p>
+      <p class="cita">
         <q
           ><em
             >La belleza comienza en el momento en el que decides ser tú
