--- a/pagina3.html
+++ b/pagina3.html
@@ -125,7 +125,7 @@
       <!--CATEGORÍA OJOS-->
       <details>
         <summary>CATEGORÍA OJOS</summary>
-        <table border="1">
+        <table>
           <caption>
             TIENDA CATEGORÍA OJOS &#128065;
           </caption>
@@ -147,7 +147,7 @@
                   src="imagenes/ojos_hypnose_drama.png"
                   alt="logo"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Hypnôse Drama</td>
@@ -179,7 +179,7 @@
                   src="imagenes/ojos_lash_idole.png"
                   alt="logo"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Lash Ídole</td>
@@ -217,7 +217,7 @@
       <!--CATEGORÍA LABIOS-->
       <details>
         <summary>CATEGORÍA LABIOS</summary>
-        <table border="1">
+        <table>
           <caption>
             TIENDA CATEGORÍA LABIOS &#128068;
           </caption>
@@ -239,7 +239,7 @@
                   src="imagenes/labios_fenty.png"
                   alt="labios stix"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Gloss Bomb Stix</td>
@@ -284,10 +284,10 @@
             <tr>
               <td>
                 <img
-                  src="imagenes/P10051031_principal.avif"
+                  src="imagenes/fentymarron-Photoroom.png"
                   alt="labios cream"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Gloss Bomb Cream</td>
@@ -335,7 +335,7 @@
       <!--CATEGORÍA UÑAS-->
       <details>
         <summary>CATEGORÍA UÑAS</summary>
-        <table border="1">
+        <table>
           <caption>
             TIENDA CATEGORÍA UÑAS &#128133;
           </caption>
@@ -357,7 +357,7 @@
                   src="imagenes/descarga.png"
                   alt="unas brillo"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Blue me biodegradable glitter top coat</td>
@@ -395,7 +395,7 @@
                   src="imagenes/descarga(1).png"
                   alt="unas carne"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>Breather nail lacquer</td>
@@ -454,7 +454,7 @@
       <!--CATEGORÍA FACIAL-->
       <details>
         <summary>CATEGORÍA FACIAL</summary>
-        <table border="1">
+        <table>
           <caption>
             TIENDA CATEGORIA FACIAL &#129494;
           </caption>
@@ -475,7 +475,7 @@
                   src="imagenes/cara_mascarilla_verde.png"
                   alt="facial verde"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>
@@ -509,7 +509,7 @@
                   src="imagenes/cara_mascarilla_rosa.png"
                   alt="facial rosa"
                   width="170"
-                  height="300"
+                  height="200"
                 />
               </td>
               <td>
@@ -534,21 +534,10 @@
           </tbody>
         </table>
       </details>
-      <hr />
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
-        <a
-          href="#inicio"
-          class="enlaceLogo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
         <a
           href="https://www.instagram.com/"
           target="_blank"
@@ -602,7 +591,12 @@
         </a>
       </nav>
 
+      <p>&copy; 2025 Divas-Makeup. Todos los derechos reservados.</p>
       <p>
+        Divas-Makeup es una marca dedicada a la belleza profesional, el
+        maquillaje artístico y la asesoría de imagen personalizada.
+      </p>
+      <p class="cita">
         <q
           ><em
             >La belleza comienza en el momento en el que decides ser tú
