--- a/pagina4.html
+++ b/pagina4.html
@@ -271,7 +271,7 @@
                 <td></td>
                 <th>
                   <img
-                    src="imagenes/P10051031_principal.avif"
+                    src="imagenes/fentymarron-Photoroom.png"
                     alt="Gloss Bomb Cream"
                     height="200"
                   />
@@ -649,16 +649,6 @@
     <footer>
       <nav>
         <a
-          href="#inicio"
-          class="enlaceLogo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
-        <a
           href="https://www.instagram.com/"
           target="_blank"
         >
@@ -711,7 +701,12 @@
         </a>
       </nav>
 
+      <p>&copy; 2025 Divas-Makeup. Todos los derechos reservados.</p>
       <p>
+        Divas-Makeup es una marca dedicada a la belleza profesional, el
+        maquillaje artístico y la asesoría de imagen personalizada.
+      </p>
+      <p class="cita">
         <q
           ><em
             >La belleza comienza en el momento en el que decides ser tú
