--- a/pagina6.html
+++ b/pagina6.html
@@ -121,7 +121,7 @@
 
     <!-- Cuerpo de la página donde aparece el contenido -->
     <main>
-      <section>
+      <section id="musica">
         <!--Permitimos poner música-->
         <p>¿Te apetece escuchar música relajante de fondo?</p>
         <audio controls>
@@ -141,11 +141,12 @@
         <form
           action="procesamiento_formulario.php"
           method="post"
+          id="formulario"
         >
-          <fieldset>
-            <legend><strong>FORMULARIO DE CONTACTO</strong></legend>
-            <p>
-              <strong>Nombre:</strong>
+          <fieldset id="datosPersonales">
+            <legend><h3>FORMULARIO DE CONTACTO</h3></legend>
+            <p class="obligatorio">
+              <strong>Nombre</strong>
               <input
                 type="text"
                 name="nombre"
@@ -153,9 +154,8 @@
                 required
               />
             </p>
-            <br />
-            <p>
-              <strong>Apellidos:</strong>
+            <p class="obligatorio">
+              <strong>Apellidos</strong>
               <input
                 type="text"
                 name="apellidos"
@@ -163,9 +163,8 @@
                 required
               />
             </p>
-            <br />
-            <p>
-              <strong>Fecha de nacimiento:</strong>
+            <p class="obligatorio">
+              <strong>Fecha de nacimiento</strong>
               <input
                 type="date"
                 name="fecha"
@@ -173,26 +172,23 @@
                 required
               />
             </p>
-            <br />
           </fieldset>
-          <br />
 
           <!--Segundo formualario con fieldset (email y número de teléfono)-->
-          <fieldset>
+          <fieldset id="metodosContacto">
             <legend>
               <h3>MÉTODOS DE CONTACTO</h3>
             </legend>
             <p>
-              <strong>Email:</strong>
+              <strong>Email</strong>
               <input
                 type="email"
                 name="email"
                 size="30"
               />
             </p>
-            <br />
-            <p>
-              <strong>Número de teléfono:</strong>
+            <p class="obligatorio">
+              <strong>Número de teléfono</strong>
               <input
                 type="text"
                 name="telefono"
@@ -201,12 +197,10 @@
                 required
               />
             </p>
-            <br />
           </fieldset>
-          <br />
 
           <!--Tercer y último formualario con fieldset (provincia y motivo de consulta)-->
-          <fieldset>
+          <fieldset id="motivoConsulta">
             <legend>
               <h3>¿DESDE DÓNDE NOS CONTACTA Y POR QUÉ?</h3>
             </legend>
@@ -231,10 +225,9 @@
               <option value="7">Huelva</option>
               <option value="8">Granada</option>
             </select>
-
-            <br />
-
-            <p><strong>¿Cuál es el motivo de su consulta?</strong></p>
+            <p class="obligatorio">
+              <strong>¿Cuál es el motivo de su consulta?</strong>
+            </p>
             <textarea
               name="consulta"
               rows="5"
@@ -244,33 +237,24 @@
               required
             ></textarea>
           </fieldset>
-          <br />
-          <input
-            type="submit"
-            value="Enviar"
-          />
-          <input
-            type="reset"
-            value="Borrar"
-          />
+          <div id="botones">
+            <input
+              class="boton"
+              type="submit"
+              value="Enviar"
+            />
+            <input
+              class="boton"
+              type="reset"
+              value="Borrar"
+            />
+          </div>
         </form>
       </section>
-      <br />
-      <hr />
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
-        <a
-          href="#inicio"
-          class="enlaceLogo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
         <a
           href="https://www.instagram.com/"
           target="_blank"
@@ -324,7 +308,12 @@
         </a>
       </nav>
 
+      <p>&copy; 2025 Divas-Makeup. Todos los derechos reservados.</p>
       <p>
+        Divas-Makeup es una marca dedicada a la belleza profesional, el
+        maquillaje artístico y la asesoría de imagen personalizada.
+      </p>
+      <p class="cita">
         <q
           ><em
             >La belleza comienza en el momento en el que decides ser tú
