--- a/pagina7.html
+++ b/pagina7.html
@@ -122,8 +122,6 @@
     <main>
       <section>
         <!-- Aparecen las distintas preguntas y respuestas más comunes que los clientes suelen hacer. -->
-        <h3>PREGUNTAS FRECUENTES</h3>
-        <br />
         <details>
           <p>
             En Diva MakeUp nuestros productos son 100% <em>cruelty free</em>, ya
@@ -132,7 +130,6 @@
           </p>
           <summary>¿Son nuestros productos <em>cruelty free</em> ?</summary>
         </details>
-        <br />
         <details>
           <p>
             Sí, disponemos de tarjetas de regalo de 10, 50 y 100 euros además de
@@ -141,7 +138,6 @@
           </p>
           <summary>¿Se pueden comprar tarjetas de regalo?</summary>
         </details>
-        <br />
         <details>
           <p>
             Los envíos tardan de 1 a 3 días laborables en ser enviados, a partir
@@ -150,7 +146,6 @@
             <summary>¿Cuánto tarda en llegar el envío a casa?</summary>
           </p>
         </details>
-        <br />
         <details>
           <p>
             A través de nuestras redes sociales o acercándote a nuestra tienda
@@ -158,7 +153,6 @@
           </p>
           <summary>¿Cómo puedo contactar con vosotros?</summary>
         </details>
-        <br />
         <details>
           <p>
             Sí, están a disposición de todos nuestros clientes la posibilidad de
@@ -166,7 +160,6 @@
           </p>
           <summary>¿Ofrecéis cursos personalizados?</summary>
         </details>
-        <br />
         <details>
           <p>
             Para formar parte de nuestro equipo, mande su CV a nuestro correo
@@ -174,7 +167,6 @@
           </p>
           <summary>¿Cómo puedo trabajar con vosotros?</summary>
         </details>
-        <br />
         <details>
           <p>
             Si tienes más de 10.000 seguidores en tus redes sociales, ponte en
@@ -187,16 +179,6 @@
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
-        <a
-          href="#inicio"
-          class="enlaceLogo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
         <a
           href="https://www.instagram.com/"
           target="_blank"
@@ -250,7 +232,12 @@
         </a>
       </nav>
 
+      <p>&copy; 2025 Divas-Makeup. Todos los derechos reservados.</p>
       <p>
+        Divas-Makeup es una marca dedicada a la belleza profesional, el
+        maquillaje artístico y la asesoría de imagen personalizada.
+      </p>
+      <p class="cita">
         <q
           ><em
             >La belleza comienza en el momento en el que decides ser tú
